tests/invalid/dict_literal_mixed_value_types/main.py
def run_case() -> None:
    d = {1: 10, 2: "x"}
    print(d)


if __name__ == "__main__":
    run_case()
